[package]
name = "rs-cleaner"
version = "0.1.0"
edition = "2024"
description = "Lightweight command-line tool for cleaning up build artifacts and unused dependencies across projects"
license = "MIT"
readme = "README.md"
repository = "https://github.com/hazetwo/rs-cleaner"

[dependencies]
clap = { version = "4.6.0", features = ["derive"] }
dialoguer = "0.12.0"
indicatif = "0.18.4"
phf = { version = "0.13.1", features = ["macros"] }
walkdir = "2.5.0"
